clean_run2/python_auto.log
  File "max20_workflow.py", line 142
    if torsion.atom_indices != locked_torsion.atom_indices:
    ^
IndentationError: unexpected indent
